# Iamb

./: .gitignore  Arithmetic  Core  Elementary  LICENSE  README.md  TODO.md  arithmetic.h  comparison.h  core.h  elementary.h  iamb.h  meta.h  traits.h
Tests/: CMakeLists.txt
Tests/src/: iamb_comparison_tests.cpp  iamb_construction_tests.cpp  iamb_operator_tests.cpp
